# surrogatetools

./: LICENSE  README.md  pyproject.toml
examples/: example.ipynb
examples/data/: X_test.txt  X_train.txt  Y_test.txt  Y_train.txt
surrogatetools/: __init__.py  _surrogate.py
